--- a/packages/player/src/style/annotation.less
+++ b/packages/player/src/style/annotation.less
@@ -30,3 +30,8 @@
   height: calc(100% - 2*0.8rem);
 }
 
+
+// ----------- External content annotation
+
+.vaply-externalContentAnnotation__container {
+}
